[gd_scene load_steps=2 format=3 uid="uid://bw8j3k7f5lnan"]

[ext_resource type="Script" uid="uid://cesmin8sfofsx" path="res://scenes/entities/RobotFrame.gd" id="1_frame"]

[node name="RobotFrame" type="Node2D"]
script = ExtResource("1_frame")

[node name="FrameBackground" type="ColorRect" parent="."]
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
color = Color(0.2, 0.2, 0.3, 0.5)

[node name="ScrapperSprite" type="Label" parent="."]
offset_left = -60.0
offset_top = 20.0
offset_right = -40.0
offset_bottom = 40.0
text = "🔧"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HeadSprite" type="Label" parent="."]
offset_left = -10.0
offset_top = -40.0
offset_right = 10.0
offset_bottom = -20.0
text = "📡"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CoreSprite" type="Label" parent="."]
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
text = "⚙️"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LeftArmSprite" type="Label" parent="."]
offset_left = -40.0
offset_top = -10.0
offset_right = -20.0
offset_bottom = 10.0
text = "🔫"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightArmSprite" type="Label" parent="."]
offset_left = 20.0
offset_top = -10.0
offset_right = 40.0
offset_bottom = 10.0
text = "🔫"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LegsSprite" type="Label" parent="."]
offset_left = -10.0
offset_top = 20.0
offset_right = 10.0
offset_bottom = 40.0
text = "🦵"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UtilitySprite" type="Label" parent="."]
offset_left = 40.0
offset_top = 20.0
offset_right = 60.0
offset_bottom = 40.0
text = "🛠️"
horizontal_alignment = 1
vertical_alignment = 1
